--- a/m-app/package.json
+++ b/m-app/package.json
@@ -20,6 +20,7 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "bundle-loader": "^0.5.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   }
