--- a/m-app/package.json
+++ b/m-app/package.json
@@ -15,6 +15,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "css-loader": "^0.26.2",
+    "jspm": "^0.16.52",
     "style-loader": "^0.13.2",
     "webpack": "^2.2.1"
   },
@@ -22,5 +23,21 @@
     "bundle-loader": "^0.5.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
+  },
+  "jspm": {
+    "directories": {
+      "baseURL": "public"
+    },
+    "dependencies": {
+      "TobyEalden/pi-experiment-lib": "github:TobyEalden/pi-experiment-lib@0.1.1",
+      "pi-experiment-lib": "github:TobyEalden/pi-experiment-lib@0.1.1",
+      "react": "npm:react@^15.4.2",
+      "react-dom": "npm:react-dom@^15.4.2"
+    },
+    "devDependencies": {
+      "babel": "npm:babel-core@^5.8.24",
+      "babel-runtime": "npm:babel-runtime@^5.8.24",
+      "core-js": "npm:core-js@^1.1.4"
+    }
   }
 }
