--- a/m-app/package.json
+++ b/m-app/package.json
@@ -32,6 +32,7 @@
       "TobyEalden/pi-experiment-lib": "github:TobyEalden/pi-experiment-lib@0.1.1",
       "callemall/material-ui": "github:callemall/material-ui@^0.17.0",
       "jss": "npm:jss@^6.3.0",
+      "jss-theme-reactor": "npm:jss-theme-reactor@^0.10.0",
       "material-ui": "npm:material-ui@1.0.0-alpha.6",
       "pi-experiment-lib": "github:TobyEalden/pi-experiment-lib@0.1.1",
       "react": "npm:react@^15.4.2",
